testsuite/tests/interpreter_errors/positionnal_after_named/test.out
script.lkql:3:11: error: Positional argument after a named one
  3 | add(x=21, 21)
    |           ^^

